Fix alignment and justification for projects index

--- a/frontend/src/styles/base/_reset.scss
+++ b/frontend/src/styles/base/_reset.scss
@@ -40,7 +40,7 @@ small {
   vertical-align: inherit;
   box-sizing: inherit;
   background: inherit;
-  overflow: inherit;
+  overflow: initial;
 }
 
 ol,
