--- a/frontend/src/styles/components/_projects_index.scss
+++ b/frontend/src/styles/components/_projects_index.scss
@@ -1,10 +1,18 @@
 .projects-index {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   h1 {
     font-size: 7vw;
   }
 
   .projects-index-list {
+    width: 100%;
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    overflow: auto;
 
     li a {
       display: flex;
